--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,6 @@ navbar:
 base_url: http://killianverhoeye.github.io/killian-verhoeye.blog/
 collections:
     posts:
-      disqus: Killian's Blog
+      disqus: killian-verhoeye-blog
       share: [twitter, linkedin, facebook]
 output: distill::distill_article
